--- a/ReadingList/ReadingList/Base.lproj/Main.storyboard
+++ b/ReadingList/ReadingList/Base.lproj/Main.storyboard
@@ -86,28 +86,27 @@
         <scene sceneID="yEP-Db-UBB">
             <objects>
                 <tableViewController id="7R2-HX-Rfg" customClass="RELAddBookController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="OOB-Uc-J0h">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="OOB-Uc-J0h">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <sections>
                             <tableViewSection id="sU4-mY-qqR">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="2hs-uU-QvV">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="72"/>
+                                        <rect key="frame" x="20" y="18" width="350" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2hs-uU-QvV" id="J0g-wx-MeK">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OR0-vK-xqd">
-                                                    <rect key="frame" x="15" y="5.9999999999999991" width="360" height="15.666666666666664"/>
+                                                    <rect key="frame" x="15" y="5.9999999999999991" width="320" height="15.666666666666664"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="The Tempest" textAlignment="natural" minimumFontSize="13" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5zV-zN-kQO">
-                                                    <rect key="frame" x="15" y="28" width="360" height="34"/>
+                                                    <rect key="frame" x="15" y="28" width="320" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textField>
@@ -123,20 +122,20 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="Npo-ho-D1g">
-                                        <rect key="frame" x="0.0" y="116.66666603088379" width="390" height="72"/>
+                                        <rect key="frame" x="20" y="90" width="350" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Npo-ho-D1g" id="cbC-f7-lg2">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjQ-gg-Cpv">
-                                                    <rect key="frame" x="15" y="6" width="360" height="16"/>
+                                                    <rect key="frame" x="15" y="6" width="320" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1601" textAlignment="natural" minimumFontSize="13" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zVa-bM-dkf">
-                                                    <rect key="frame" x="15" y="28" width="360" height="34"/>
+                                                    <rect key="frame" x="15" y="28" width="320" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="numberPad"/>
                                                 </textField>
@@ -152,20 +151,20 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="Ljr-vk-h0o">
-                                        <rect key="frame" x="0.0" y="188.66666603088379" width="390" height="72"/>
+                                        <rect key="frame" x="20" y="162" width="350" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ljr-vk-h0o" id="nDu-1Z-i9c">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rsb-jT-oH8">
-                                                    <rect key="frame" x="15" y="6" width="360" height="16"/>
+                                                    <rect key="frame" x="15" y="6" width="320" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="William" textAlignment="natural" minimumFontSize="13" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="oyl-8C-BBQ">
-                                                    <rect key="frame" x="15" y="28" width="360" height="34"/>
+                                                    <rect key="frame" x="15" y="28" width="320" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textField>
@@ -181,20 +180,20 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="lA4-yH-QZi">
-                                        <rect key="frame" x="0.0" y="260.66666603088379" width="390" height="72"/>
+                                        <rect key="frame" x="20" y="234" width="350" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lA4-yH-QZi" id="O8c-5I-Vf3">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="72"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sul-hA-0kY">
-                                                    <rect key="frame" x="15" y="6" width="360" height="16"/>
+                                                    <rect key="frame" x="15" y="6" width="320" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Shakespeare" textAlignment="natural" minimumFontSize="13" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="O7m-G1-YX5">
-                                                    <rect key="frame" x="15" y="28" width="360" height="34"/>
+                                                    <rect key="frame" x="15" y="28" width="320" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textField>
@@ -229,6 +228,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="firstNameField" destination="oyl-8C-BBQ" id="Tth-OD-paV"/>
+                        <outlet property="lastNameField" destination="O7m-G1-YX5" id="nlW-Vf-5Tv"/>
+                        <outlet property="titleField" destination="5zV-zN-kQO" id="5wY-ck-rSz"/>
+                        <outlet property="yearField" destination="zVa-bM-dkf" id="xzP-kK-4OC"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3Z-H2-zOE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="rpJ-Iu-M9C" userLabel="Exit" sceneMemberID="exit"/>
